syntax = "proto2";

package monitoring;

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/monitoring/config";

message PackageVersion {
    // Revision to be reported to Solomon.
    required uint64 Revision = 1;
    // Package version as defined by pkg.json.
    required string Version = 2;
}

////////////////////////////////////////////////////////////////////////////////

message MonitoringConfig {
    optional uint32 Port = 1 [default = 9798];
    optional string RestartsCountFile = 2;
    optional string ConfigVersionFile = 3;
    optional string ServerVersionFile = 4;
}
